--- a/server/.env.example
+++ b/server/.env.example
@@ -44,3 +44,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+DEFAULT_CURRENCY=EUR
+CURRENCY_API_KEY=
+CURRENCY_API_ENDPOINT=http://data.fixer.io/api/
